ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: mrsethi-app-route
  namespace: mrsethi-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx ## ingress className
  rules:
  - host: mrsethi.ashutoshh.in # domain website name
    http:
      paths:
      - path: /  # homepage
        pathType: Prefix
        backend:
          service:
            name: mrsethi-internal-lb # name of the internal LB
            port:
              number: 80
